# voxcpm-cli

./: .gitignore  README.md  pyproject.toml
examples/: legacy_run.py
skills/voxcpm-tts/: SKILL.md
voxcpm_cli/: __init__.py  cli.py  engine.py  paths.py  voxcpm2_tts_helper.py
